Fixed scrollbar in seats view

--- a/controller/views/seats/seats.css
+++ b/controller/views/seats/seats.css
@@ -13,6 +13,8 @@
   margin-bottom: 0;
 
   overflow-x: auto;
+
+  -webkit-app-region: no-drag;
 }
 
 .seat {
